# aero-sea-nexus

./: .env.example  .gitignore  README.md  aero-sea-nexus-website.html  docker-compose.yml  download_videos.py  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  yt.py
.firebase/: hosting.cHVibGlj.cache
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/frontend/: app.js  index.html  styles.css
clerk-nextjs/: package-lock.json
engine/: CMakeLists.txt  README.md
engine/include/: DataModels.hpp  IngestionPipeline.hpp  SpatialGrid.hpp  TrackingEngine.hpp
engine/src/: IngestionPipeline.cpp  Server.cpp  TrackingEngine.cpp
pitch/: AeroSeaNexus_Pitch.pptx
public/: index.html  nexusWorker.js
scripts/: patch-three.mjs  scripts file
src/: App.jsx  index.css  main.jsx
src/components/: Dashboard.jsx  GlobeView.jsx  ProtectedRoute.jsx
src/components/LandingV2/: CTA.jsx  ComparisonTable.jsx  CustomCursor.jsx  Footer.jsx  Hero.jsx  InvisibleTech.jsx  RealWorldExamples.jsx  ScalingStats.jsx  TheBigIdea.jsx  WebGLBackground.jsx
src/components/ai/: AIChat.jsx  ToolCard.jsx
src/components/layout/: Sidebar.jsx  TopBar.jsx
src/components/ui/: ChartCard.jsx  CommandPalette.jsx  DataTable.jsx  MetricCard.jsx  NotificationPanel.jsx  StatusBadge.jsx
src/pages/: Dashboard.jsx  Landing.jsx  Login.jsx  Signup.jsx
src/services/: aiAgent.js
src/stubs/: three-webgpu-stub.js
wasm_engine/: build_wasm.bat  nexus_core.cpp
